098_bst_map/grade.txt
Grading at 11/07/2022:23:49:02.914088
For commit ID 72fbc7c6032bb400f52801f0ac71a9e099665581
Grading at Mon Nov  7 06:49:01 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<int, int>::Node**’ to ‘BstMap<int, int>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<int, int>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<int, int>::Node**’ to ‘BstMap<int, int>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<int, int>::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<int, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<int, std::__cxx11::basic_string<char> >::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<int, std::__cxx11::basic_string<char> >::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<int, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<int, std::__cxx11::basic_string<char> >::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<int, std::__cxx11::basic_string<char> >::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<int, Tester>::Node**’ to ‘BstMap<int, Tester>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<int, Tester>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<int, Tester>::Node**’ to ‘BstMap<int, Tester>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<int, Tester>::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, int>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, int>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, int>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, int>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, int>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, int>::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, Tester>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<std::__cxx11::basic_string<char>, Tester>::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<Tester, int>::Node**’ to ‘BstMap<Tester, int>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<Tester, int>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<Tester, int>::Node**’ to ‘BstMap<Tester, int>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<Tester, int>::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<Tester, std::__cxx11::basic_string<char> >::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<Tester, std::__cxx11::basic_string<char> >::Node**
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:53:20: error: cannot convert ‘BstMap<Tester, Tester>::Node**’ to ‘BstMap<Tester, Tester>::Node*’ in assignment
   53 |         it = &(it->left);
      |               ~~~~~^~~~~
      |                    |
      |                    BstMap<Tester, Tester>::Node**
bstmap.h:56:20: error: cannot convert ‘BstMap<Tester, Tester>::Node**’ to ‘BstMap<Tester, Tester>::Node*’ in assignment
   56 |         it = &(it->right);
      |               ~~~~~^~~~~~
      |                    |
      |                    BstMap<Tester, Tester>::Node**
The code did not compile.  This test failed.

Overall Grade: F
